# patterns

./: .gitignore  .gitmodules  CMakeLists.txt  config.cpp  config.h  databasedecoder.h  dbmanager.h  disk.cpp  disk.h  diskmanager.cpp  diskmanager.h  factory.cpp  factory.h  filedbmanager.cpp  filedbmanager.h  flock.cpp  flock.h  flockmanager.cpp  flockmanager.h  gpspoint.cpp  gpspoint.h  gpspointtemporalprocessor.cpp  gpspointtemporalprocessor.h  gpstuplelistener.h  grid.cpp  grid.h  gridmanager.cpp  gridmanager.h  lifemapdbdecoder.cpp  lifemapdbdecoder.h  main.cpp  manager.cpp  manager.h  sqlitedbmanager.cpp  sqlitedbmanager.h  trajectory.cpp  trajectory.h  trajectorymanager.cpp  trajectorymanager.h  trucksdbdecoder.cpp  (+5 more)
cmake/: FindSQLite3.cmake
scripts/: compare.rb  compare2.rb  compare_flocks_patterns.rb  compare_multithread.rb  filter.rb  tdrive.rb  thread_exec_config.json
src/: CMakeLists.txt  main.cpp  mainng.cpp
src/common/: componentfactory.h  config.cpp  config.h  configparser.cpp  configparser.h  datahandler.h  defaultlogger.cpp  defaultlogger.h  factory.cpp  factory.h  launcher.cpp  launcher.h  logger.h  manager.cpp  manager.h  optionparser.h  orchestrator.cpp  orchestrator.h  patterns.h  utils.cpp  utils.h
src/database/: dbmanager.h  filedbmanager.cpp  filedbmanager.h  sqlitedbmanager.cpp  sqlitedbmanager.h
src/dataconnectors/: dataconnector.h  fileconnector.cpp  fileconnector.h  rawdata.h  rawdatasqlite3_stmt.cpp  rawdatasqlite3_stmt.h  rawdatastring.cpp  rawdatastring.h  sqlitedataconnector.cpp  sqlitedataconnector.h
src/datadecoders/: berlinmoddecoder.cpp  berlinmoddecoder.h  brinkhoffmntgdecoder.cpp  brinkhoffmntgdecoder.h  customdecoder.cpp  customdecoder.h  datadecoder.h  tdrivedecoder.cpp  tdrivedecoder.h  truckspaperdecoder.cpp  truckspaperdecoder.h
src/datalisteners/: datalistener.h  gpspointbuffererlistener.cpp  gpspointbuffererlistener.h  gpspointbuffererlistenerdata.h  gpspointlistener.cpp  gpspointlistener.h  gpspointlistenerdata.h
src/datamodel/: datamodel.h  processordata.h
src/dataprocessors/: dataprocessor.h  flockprocessor.cpp  flockprocessor.h  flockprocessorthread.cpp  flockprocessorthread.h  flockutils.cpp  flockutils.h  parallelflockprocessor.cpp  parallelflockprocessor.h  sharedbuffer.h
src/decoder/: basegpsfiledecoder.cpp  basegpsfiledecoder.h  berlinmoddecoder.cpp  berlinmoddecoder.h  brinkhoffmntgdecoder.cpp  brinkhoffmntgdecoder.h  databasedecoder.h  lifemapdbdecoder.cpp  lifemapdbdecoder.h  sortedfiledecoder.cpp  sortedfiledecoder.h  tdrivedecoder.cpp  tdrivedecoder.h  trucksdbdecoder.cpp  trucksdbdecoder.h  truckspaperdbdecoder.cpp  truckspaperdbdecoder.h
src/flock/: disk.cpp  disk.h  diskmanager.cpp  diskmanager.h  flock.cpp  flock.h  flockmanager.cpp  flockmanager.h  grid.cpp  grid.h  gridmanager.cpp  gridmanager.h
src/gps/: gpspoint.cpp  gpspoint.h  gpspointtemporalprocessor.cpp  gpspointtemporalprocessor.h  gpstuplelistener.h  trajectory.cpp  trajectory.h
src/performance/: memoryreporter.cpp  memoryreporter.h  performancelogger.cpp  performancelogger.h
src/sorter/: CMakeLists.txt  main.cpp  sorter.cpp  sorter.h
test/: CMakeLists.txt
test/cmake/: test_utils.cmake
test/common/: CMakeLists.txt  configparsertest.cpp  test_utils.cpp  utilstest.cpp
test/system/: CMakeLists.txt  test_system.cpp
test/system/data/: thorough_result  trucks_by_time.txt
test/system/test_data/: thorough_result
